--- a/auth-lib/src/main/res/layout/com_spotify_sdk_login_dialog.xml
+++ b/auth-lib/src/main/res/layout/com_spotify_sdk_login_dialog.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <!--
-    Copyright (c) 2015 Spotify AB
+    Copyright (c) 2015-2016 Spotify AB
 
     Licensed to the Apache Software Foundation (ASF) under one
     or more contributor license agreements.  See the NOTICE file
@@ -20,7 +19,6 @@
     specific language governing permissions and limitations
     under the License.
 -->
-
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/com_spotify_sdk_login_webview_container"
     android:layout_width="match_parent"
