--- a/auth-sample/src/main/res/layout/activity_main.xml
+++ b/auth-sample/src/main/res/layout/activity_main.xml
@@ -78,6 +78,22 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"/>
 
+        <Button
+            android:id="@+id/button4"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="100dp"
+            android:layout_marginBottom="16dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            android:layout_marginStart="16dp"
+            android:onClick="onDownloadSpotifyClicked"
+            android:text="Download Spotify"
+            app:layout_constraintTop_toBottomOf="@id/button2"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"/>
+
         <TextView
             android:id="@+id/token_text_view"
             android:layout_width="0dp"
