--- a/auth-sample-kotlin/src/main/res/layout/activity_main.xml
+++ b/auth-sample-kotlin/src/main/res/layout/activity_main.xml
@@ -19,7 +19,7 @@
     specific language governing permissions and limitations
     under the License.
 -->
-<android.support.design.widget.CoordinatorLayout
+<androidx.coordinatorlayout.widget.CoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_main"
@@ -85,4 +85,4 @@
 
     </LinearLayout>
 
-</android.support.design.widget.CoordinatorLayout>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
