--- a/auth-sample/src/main/res/layout/activity_main.xml
+++ b/auth-sample/src/main/res/layout/activity_main.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
     Copyright (c) 2015-2016 Spotify AB
 
     Licensed to the Apache Software Foundation (ASF) under one
@@ -19,8 +18,7 @@
     specific language governing permissions and limitations
     under the License.
 -->
-<androidx.coordinatorlayout.widget.CoordinatorLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
@@ -44,7 +42,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="8dp"
             android:onClick="onRequestTokenClicked"
-            android:text="Request Token" />
+            android:text="@string/btn_req_token" />
 
         <TextView
             android:id="@+id/code_text_view"
@@ -58,31 +56,38 @@
             android:layout_height="wrap_content"
             android:layout_margin="8dp"
             android:onClick="onRequestCodeClicked"
-            android:text="Request Code" />
+            android:text="@string/btn_req_code" />
 
-        <ScrollView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_margin="8dp"
-            android:layout_weight="1">
-
-            <TextView
-                android:id="@+id/response_text_view"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textSize="10sp"
-                tools:text="Line 1\nLine 2\nLine 3" />
-
-        </ScrollView>
-
-        <Button
-            android:id="@+id/button3"
+        <TextView
+            android:id="@+id/response_text_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="8dp"
-            android:onClick="onGetUserProfileClicked"
-            android:text="Get User Profile" />
+            android:textSize="10sp"
+            tools:text="Line 1\nLine 2\nLine 3" />
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <Button
+                android:id="@+id/btn_get_profile"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_margin="8dp"
+                android:layout_weight="1"
+                android:layout_gravity="center_vertical"
+                android:onClick="onGetUserProfileClicked"
+                android:text="@string/btn_get_profile" />
+
+            <Button
+                android:id="@+id/btn_clear"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_margin="8dp"
+                android:layout_weight="1"
+                android:layout_gravity="center_vertical"
+                android:onClick="onClearCredentialsClicked"
+                android:text="@string/btn_clear_credentials" />
+        </LinearLayout>
     </LinearLayout>
-
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
